--- a/ScintillatorPaper/ScintillatorPaper.tex
+++ b/ScintillatorPaper/ScintillatorPaper.tex
@@ -11,7 +11,7 @@
 %%\llap{$^c$}University of California, Berkeley, Berkeley, CA 94704, USA\\
 E-mail: \email{rschofield@physics.ucla.edu}}
 
-\abstract{Liquid scintillator-based detectors can be made more sensitive to low energy events by increasing light yield of the scintillator and enabling direction reconstruction of particles. This study presents the optimal concentration of wavelength-shifter 2,5-Diphenyloxazole (PPO) in various solvents.  The researchers measured the light yield of seven different scintillators (Toluene, Pseudocumene (PC), Linear Alkyl Benzene (LAB), Phenylcyclohexane (PCH), Phenyl-o-Xylyl Ethane (PXE) and two grades of Di-Isopropyl Napthalene (DIN)), and modeled the light yield as a function of the concentration of PPO. In addition, the optical properties of 2~g/L PPO in toluene doped with quantum-dots (QDs) are measured. QDs' ability to fine-tune the absorption and emission spectrum of liquid scintillators demonstrate that QDs are viable candidates for conserving the Cherenkov photons produced by interactions in the liquid scintillator.}
+\abstract{Liquid scintillator-based detectors can be made more sensitive to low energy events by increasing the scintillator's light yield and enabling direction reconstruction of particles. This study presents the optimal concentration of wavelength-shifter 2,5-Diphenyloxazole (PPO) in various solvents.   The light yield of seven different scintillators (Toluene, Pseudocumene (PC), Linear Alkyl Benzene (LAB), Phenylcyclohexane (PCH), Phenyl-o-Xylyl Ethane (PXE) and two grades of Di-Isopropyl Napthalene (DIN)) are measured and modeled as a function of the concentration of PPO. In addition, the optical properties of 2~g/L PPO in toluene doped with quantum-dots (QDs) are measured. QDs' ability to fine-tune the absorption and emission spectra of liquid scintillators demonstrate their viability to conserve the directional Cherenkov signal produced by interactions in the liquid scintillator.}
 
 \begin{document}
 
@@ -34,7 +34,7 @@ E-mail: \email{rschofield@physics.ucla.edu}}
 %Currently, there are two liquid scintillator 0$\nu\beta\beta$ experiments that are running or will be running in the near future: KamLAND-Zen \cite{kamlandzen13} has already set a competitive limit for the 0$\nu\beta\beta$ half-life of $^{136}$Xe, and the SNO+ experiment with $^{130}$Te is under construction \cite{snoplus10,hartnell12}. Liquid scintillators can be scaled easily to large volumes, and increasing the volume to surface area ratio of the detector can minimize external backgrounds. Energy resolution is crucial in order to obtain sufficient separation between signal and background, including the irreducible background from 2$\nu\beta\beta$. The light yield is directly linked to the energy resolution in liquid scintillator detectors. This work contributes to the effort of optimizing the light yield of candidate scintillator mixtures, including QD doped scintillators. QDs may even help reduce the background further by allowing reconstruction of events via Cherenkov radiation in the scintillator which will allow background signals to be rejected.
 
 \subsection{Liquid Scintillators}
-When charged particles propagate through a scintillator, electrons in the $\pi$-bonds of the aromatic rings are readily excited \cite{birks64}. The absorption and emission spectra of a single-molecule based scintillator overlap. In order to prevent degradation of efficiency due to the reabsorption by the scintillator of scintillation light, the liquid scintillator (a solute) is mixed with a wavelength shifter (a solvent) that absorbs the energy from the excited electron and subsequently releases light of a longer wavelength to which the scintillator is more transparent. Light yield, the number of photons produced per deposited energy, is a vital property of the scintillator because it relates directly to the energy resolution a scintillator-based detector. Optimizing the energy transfer between solvent and solute molecules maximizes the light yield.
+When charged particles propagate through a scintillator, electrons in the $\pi$-bonds of the aromatic rings are readily excited \cite{birks64}. The absorption and emission spectra of a single-molecule based scintillator overlap. In order to prevent degradation of efficiency due to the reabsorption of scintillation light by the scintillator, the liquid scintillator (a solute) was mixed with a wavelength shifter (a solvent). The wavelength shifter absorbs the energy from the excited electron and then releases light of a longer wavelength to which the scintillator is more transparent. Light yield, the number of photons produced per deposited energy, is a vital property of the scintillator because it relates directly to the energy resolution of a scintillator-based detector. Optimizing the energy transfer between solvent and solute molecules maximizes the light yield.
 
 \begin{table}
 \caption{Solvents and solute names or abbreviations used in this paper, the corresponding IUPAC names, CAS numbers and information on the source of the chemicals. \label{solvents_table}}
@@ -72,7 +72,7 @@ When charged particles propagate through a scintillator, electrons in the $\pi$-
 
 % One of the overarching themes of this paper is to identify solvents with generally high light yields and the light yield dependences on solute concentration. The candidates we studied are listed in table \ref{solvents_table}. PPO is used as a wavelength-shifter. 
  
-In addition to measuring the light yield of the various liquid scintillator candidates listed in Table \ref{solvents_table}, the concentration of the wavelength shifter PPO in each scintillator candidate is varied and the relative light yields of these binary scintillator mixtures are compared. PPO concentration affects the light yield through two competing mechanisms. The efficiency of energy transfer from solvent to solute increases with increasing PPO concentration. At the studied PPO concentrations, the energy transfers are predominantly non-radiative F\"orster energy transfers \cite{foerster48,foerster59}, but the emission and re-absorption of real photons or collision energy transfer and others \cite{dexter53} also contribute to the overall effective energy transfer rate. There also is the effect of self-quenching \cite{birks64} which becomes more important at higher PPO concentrations. In this process two PPO molecules interact with each other and no light is emitted. 
+ The concentration of the wavelength shifter PPO in each scintillator candidate listed in Table \ref{solvents_table} was adjusted and the relative light yields of these binary scintillator mixtures were compared. PPO concentration affects the light yield through two competing mechanisms. The efficiency of energy transfer from solvent to solute increases with increasing PPO concentration. At the studied PPO concentrations, the energy transfers are predominantly non-radiative F\"orster energy transfers \cite{foerster48,foerster59}, but the emission and re-absorption of real photons or collision energy transfer and others \cite{dexter53} also contribute to the overall effective energy transfer rate. There also is the effect of self-quenching \cite{birks64} which becomes more important at higher PPO concentrations. In this process, two PPO molecules interact with each other and no light is emitted. 
 The light yield $I(c_{PPO})$ as a function of PPO concentration $c_{PPO}$ can be described by the equation 
 \begin{equation}
 \label{fit_eq}
@@ -81,7 +81,7 @@ I(c_{PPO})=p_1 \cdot \frac{1}{1+p_2/c_{PPO}} \cdot \frac{1}{1+p_3\cdot c_{PPO}}
 where $p_1$, $p_2$ and $p_3$ are three solvent specific parameters: $p_1$ characterizes the maximum light yield without self-quenching, $p_2$ the effectiveness of energy transfer from solvent molecules to solute molecules, and $p3$ the effect of self-quenching. For details on the derivation of these types of equations see \cite{buck07,aberle11} and references therein. 
 
 \subsection{Quantum-Dots}\label{qd_sec}
-Quantum-Dots are semiconducting nanocrystals. The size of a QD is inversely proportional to its band gap and therefore proportional to the wavelength of light it absorbs and emits. Doping scintillator with QDs enables the absorbed and emitted wavelength to be fine tuned, and can be used as a tool to obtain a directional signal from particles and thus to reduce background signals.
+Quantum-Dots are semiconducting nanocrystals. The size of a QD is inversely proportional to its band gap and therefore proportional to the wavelength of light it absorbs and emits. Doping scintillator with The wavelength of the absorbed and emitted light can be controlled by doping the scintillator with QDs. QDs can thus be used as a tool to obtain a directional signal from particles (and ultimately to reduce background signals) through the mechanism described below.
 
 Cherenkov radiation is emitted whenever a charged particle travels through a medium at a speed greater than the phase velocity of light in that medium. Unlike scintillation light that is emitted isotropically, Cherenkov light is radiated in a cone that contains the directional information of the incident particle. Cherenkov light is multi-chromatic and has a broad energy distribution. Doping the scintillator with QDs that absorb and emit only high energy photons enables the longer wavelengths of Cherenkov light to travel toward the detector unimpeded by the scintillation process. Because long wavelengths travel faster than short wavelengths of light in a medium due to chromatic dispersion and because the scintillation absorption and emission process takes time, the long wavelengths of Cherenkov light will reach the detector before the scintillation light, enabling measurement of Cherenkov light and ultimately directional reconstruction of particle trajectory.  Furthermore, adding QDs to the scintillator solvent generally narrows the absorption spectrum of the liquid scintillator. Narrowing the absorption spectrum of the scintillator is important because for low energy events, there are very few long-wavelength photons emitted. For example, a 1~MeV electron emits only 83 Cherenkov photons between 370-550 nm\cite{lindley14}. 
 
@@ -118,13 +118,13 @@ Unfortunately, doping liquid scintillators with QDs comes at the cost of lower l
 
 \section{Experimental}
 \label{exp_sec}
-The light yield of candidate liquid scintillators with varying amounts of PPO and different QDs are measured. This is achieved by collecting the charge produced by a gamma ray irradiated scintillator with a PMT. In addition, the emission and absorption spectrum of the QDs are quantified with two different spectrophotometers. The details of the experimental setup are explained below followed by a description of the sample handling.
+The light yield of candidate liquid scintillators with varying amounts of PPO and different QDs was measured by collecting the charge produced by a gamma ray irradiated scintillator with a PMT. In addition, the emission and absorption spectrum of the QDs were measured with two different spectrophotometers. The details of the experimental setup are explained below followed by a description of the sample handling.
 
 \subsection{Light Yield Setup}
 \label{ly_setup_sec}
 
 \subsubsection{Setup}
-The setup is illustrated in Figure \ref{setup_fig}. A (1~cm$\times$1~cm$\times$3.5~cm) UV-transparent quartz cell (Starna 21-Q-10 \cite{starnacells}) holds the scintillator mixtures. The cell is coupled to the PMT with transparent silicone optical grease (Saint Gobain BC-630) with a similar index of refraction to the cell and PMT glass so that light losses due to reflection are minimized. The quartz cell is then secured in a reflective white Teflon block to further increase the light collection efficiency. The scintillator is excited by a ${^{137}}$Cs source with an activity of $\approx$1~$\mu$Ci (=37~kBq). The source is attached to the outside of the Teflon block. Isotope ${^{137}}$Cs undergoes beta decay with the subsequent emission of a single 662 keV gamma. The emitted gamma rays enter the quartz cell, then typically Compton scatter with electrons, which excite the scintillator. Cherenkov light is also produced for electrons with energies above a given threshold as discussed in Section  \ref{qd_sec} . A fraction of the emitted optical photons hit the photocathode of a Hamamatsu R1828-01 PMT \cite{hamamatsupmt}. A Hamamatsu E2979-500 base \cite{hamamatsubase} is used, and the high voltage of -1675~V is provided by a LeCroy 1454 high voltage system. The charge incident on the photocathode produce pulses which are recorded by an AlazarTech ATS9870 PCI waveform digitizer \cite{alazartech}. 
+The setup is illustrated in Figure \ref{setup_fig}. A (1~cm$\times$1~cm$\times$3.5~cm) UV-transparent quartz cell (Starna 21-Q-10 \cite{starnacells}) holds the scintillator mixtures. The cell is coupled to the PMT with transparent silicone optical grease (Saint Gobain BC-630) with a similar index of refraction to the cell and PMT glass so that light losses due to reflection are minimized. The quartz cell is then secured in a reflective white Teflon block to further increase the light collection efficiency. The scintillator is excited by a ${^{137}}$Cs source with an activity of $\approx$1~$\mu$Ci (=37~kBq). The source is attached to the outside of the Teflon block. Isotope ${^{137}}$Cs undergoes beta decay with the subsequent emission of a single 662 keV gamma. The emitted gamma rays enter the quartz cell, then typically Compton scatter with electrons, which excite the scintillator. Cherenkov light is also produced from electrons with energies above a given threshold as discussed in Section  \ref{qd_sec} . A fraction of the emitted optical photons hit the photocathode of a Hamamatsu R1828-01 PMT \cite{hamamatsupmt}. A Hamamatsu E2979-500 base \cite{hamamatsubase} is used, and the high voltage of -1675~V is provided by a LeCroy 1454 high voltage system. The charge incident on the photocathode produce pulses which are recorded by an AlazarTech ATS9870 PCI waveform digitizer \cite{alazartech}. 
 
 \subsubsection{Photomultiplier Tube Calibration}
 
@@ -133,7 +133,7 @@ In order to ensure reproducible and accurate measurements, a sample handling pro
 
 The bottles that store the samples are rinsed with isopropanol, cyclohexane, dried and finally rinsed with the solvent. In addition, the bottles are sealed under N$_{2}$ to reduce the amount of oxygen in contact with the sample. Oxygen interferes with the light production processes (oxygen quenching \cite{birks64}) and leads to a loss of light output. The lids of the bottles are sealed with Teflon tape and electric tape to further limit the amount of oxygen entering the bottle. 
 
- As for the measurement, the quartz cell is cleaned thoroughly when samples are changed. The optical grease on the outside is removed with ethanol and on the inside it is washed with isopropanol then dried with N$_{2}$ twice, washed with cyclohexane, and again dried with N$_{2}$. The amount of liquid scintillator sample in the cell is kept constant to avoid effects due to differences in light collection. Before each measurement, a pipet is inserted into the liquid to slowly purge the samples with nitrogen for about 10 minutes to actively remove remaining oxygen. 
+The quartz cell is also cleaned thoroughly when samples are changed. The optical grease on the outside is removed with ethanol and on the inside it is washed with isopropanol then dried with N$_{2}$ twice, washed with cyclohexane, and again dried with N$_{2}$. The amount of liquid scintillator sample in the cell is kept constant to avoid effects due to differences in light collection. Before each measurement, a pipet is inserted into the liquid to slowly purge the samples with nitrogen for about 10 minutes to actively remove remaining oxygen. 
 
 %For the PPO scans, samples not older than 4 days after mixing were used to minimize long-term irreversible effects of contact with spurious oxygen. 
 The coupling of the cell to the PMT is done consistently, and the PMT is aligned in the same way in order to avoid effects due to the earth's magnetic field. Section \ref{ly_analysis_sec} presents the studies that determine measurement reproducibility.  The quartz cell containing the liquid scintillator sample is placed in the dark box setup as described in the previous section, and a measurement is performed for a duration of 30 minutes.
@@ -147,10 +147,10 @@ The coupling of the cell to the PMT is done consistently, and the PMT is aligned
 
 \subsection{Absorption and Emission Setup}
 \subsubsection{Setup}
-A Perkin Elmer Lambda 25 UV/Vis is used for measuring the emission spectrum and a Shimadzu UV3101 for measuring absorption spectrum of the QD doped liquid scintillators. The instruments work via a double-beam setup. White light from deuterium UV lamp and a halogen lamp produce the beams. \cite{|}
+A Perkin Elmer Lambda 25 UV/Vis is used for measuring the emission spectrum and a Shimadzu UV3101 for measuring absorption spectrum of the QD doped liquid scintillators. Both instruments utilize a double-beam setup. White light from deuterium UV lamp and a halogen lamp produce the beams. \cite{|}
 
 \subsubsection{Sample Handling and Procedure}
-To measure the absorption spectrum of each quantum-dot sample, the following procedure is executed. A (1~cm$\times$1~cm$\times$3.5~cm) UV-transparent quartz cell (Starna 21-Q-10 \cite{starnacells}) is rinsed with toluene to dissolve any residue on the wall. Next, the cell is soaked in hydrochloric acid for 5 minutes to clean the cell and destroy any remaining QD. To wash away the hydrochloric acid and the residue QD constituents, the quartz cell is rinsed with distilled water and is then subjected to three iterations of liquid isopropyl alcohol evaporated by nitrogen gas. Since all of the QD samples are dissolved in toluene, a background absorption spectrum analysis is required to isolate the quantum-dot spectrum.  The cell is filled wplaced into the Shimadzu UV3101, and a background scan is performed. Next, the toluene is removed from the cell and replaced by the QD sample of choice. Finally, The sample is inserted back into the spectrophotometer, and a scan is initiated. % This is repeated for each QD candidate listed in \ref{quantum_dots_table}.
+To measure the absorption spectrum of each quantum-dot sample, the following procedure is executed. A (1~cm$\times$1~cm$\times$3.5~cm) UV-transparent quartz cell (Starna 21-Q-10 \cite{starnacells}) is rinsed with toluene to dissolve any residue on the wall. Next, the cell is soaked in hydrochloric acid for 5 minutes to clean the cell and destroy any remaining QD. To wash away the hydrochloric acid and the residue QD constituents, the quartz cell is rinsed with distilled water and is then subjected to three iterations of liquid isopropyl alcohol evaporated by nitrogen gas. Since all of the QD samples are dissolved in toluene, a background absorption spectrum analysis is required to isolate the quantum-dot spectrum.  A background scan is performed with a vial filled with pure toluene. The toluene is then replaced with the QD sample, and the absorption scan is performed.  % This is repeated for each QD candidate listed in \ref{quantum_dots_table}.
 
 The cleaning procedure for the emission spectrum measurements is the same as the procedure for the absorption trials. The emission spectrum is measured by a Perkin Elmer Lambda 25 UV/Vis and does not require a background toluene scan. 
 
@@ -175,7 +175,7 @@ This section presents the analysis methodology as well as the main results, name
 \item Charge: The integral of the baseline-subtracted waveform between the start and stop times.  
 \end{itemize}
 
-The duration of each run is around thirty minutes and during this time on the order of $3\cdot10^5$ waveforms are recorded. Each pulse corresponds to one gamma ray interacation within the liquid scintillator sample. The amount of light collected by the PMT is dependent on the scattering angle of the electron that is produced by Compton scattering of the 0.662 MeV gamma ray. The result of the charge calculation is placed in a histogram, Figure \ref{ChargeSpec_fig}. Since the Compton effect is the dominant mechanism, this histogram is a Compton spectrum. The events where the Compton scattered electron obtained close to the maximal energy, 478~keV for the 662~keV gammas from $^{137}$Cs, is associated with events at the right end of this spectrum. %Since we are interested in the largest pulses close to the Compton edge we can simply use the charges of all the pulses.
+The duration of each run is around thirty minutes and during this time on the order of $3\cdot10^5$ waveforms are recorded. Each pulse corresponds to one gamma ray interaction within the liquid scintillator. The amount of light collected by the PMT is dependent on the scattering angle of the electron that is produced by Compton scattering of the 0.662 MeV gamma ray. The result of the charge calculation is placed in a histogram, Figure \ref{ChargeSpec_fig}. Since the Compton effect is the dominant mechanism, this histogram is a Compton spectrum. The events where the Compton scattered electron obtained close to the maximal energy, 478~keV for the 662~keV gammas from $^{137}$Cs, is associated with events at the right end of this spectrum. %Since we are interested in the largest pulses close to the Compton edge we can simply use the charges of all the pulses.
 Multiple pulses are found for each waveform, including baseline fluctuations. The small fake pulses from baseline fluctuations did not affect analysis. In order to compare different scintillator mixtures, the charge where the number of events dropped to half of the Compton edge maximum is compared, Figure \ref{ChargeSpec_fig}. This quantity is proportional to the scintillator light yield. For practical reasons and because this study only looks at relative light yield, results are presented in arbitrary charge units instead of real charge units.
 
 
@@ -269,7 +269,7 @@ where  $I(0)$ is the intensity of the beam before transiting the quartz cell and
 The errors for the Perkin and Shimadzu spectrophotometers are $A=\pm0.00075$ and $A=\pm0.002$ respectfully. These errors are in close agreement with the manufactures specifications\cite{?}.
 
 \subsubsection{Absorption and Emission Results}\label{abs_emi_results}
-The absorption and emission spectrum of the QDs were extensively probed, and the results are graphed in Figures \ref{abs_spec} and \ref{emi_spec} respectfully. As stated in Section \ref{qd_sec} and proved in \ref{ly_results}, the light yield of the QD doped scintillators is much lower than that of just toluene with PPO. This is due to the overlap in emission and absorption QD spectrum coupled with low quantum efficiency \cite{lindley14}. (I'm creating a figure that shows the overlap for emission and absorption for each quantum dot). The absorption spectrum of the QD doped liquid scintillators are clearly narrower than that of toluene doped with 2 g/L PPO.
+The absorption and emission spectrum of the QDs were extensively probed, and the results are graphed in Figures \ref{abs_spec} and \ref{emi_spec} respectfully. As stated in Section \ref{qd_sec} and proved in \ref{ly_results}, the light yield of the QD doped scintillators is much lower than that of the binary mixture of toluene with PPO. This is due to the overlap in emission and absorption QD spectrum coupled with low quantum efficiency \cite{lindley14}. (I'm creating a figure that shows the overlap for emission and absorption for each quantum dot). The absorption spectrum of the QD doped liquid scintillators are narrower than that of toluene doped with 2 g/L PPO.
 (How can we back this? Need to take an absorption and emission scan of toluene + 2g/L PPO.)
 %Discuss the shift of emission spectrum (Measure Toluene with PPO emission Spectrum)
 
@@ -299,9 +299,9 @@ The absorption and emission spectrum of the QDs were extensively probed, and the
 
 
 \section{Conclusion}
-Detection of low energy events in liquid scintillators require high light yield and preservation of Cherenkov radiation. This study  successfully measures and models the light yield of seven scintillator liquids as a function of wavelength-shifter concentration in order to find the maximum light yield of each candidate. Furthermore, an extensive study on the effects of quantum-dot doping of toluene with 2 g/L of PPO in solution are analyzed. QDs are able to reduce the width and tune the location of the absorption spectrum peak. This allows the quantum efficiency of the photocathode to be matched and minimized the amount of Cherenkov radiation absorbed by the liquid scintillator.
+Detection of low energy events in liquid scintillators require high light yield and preservation of Cherenkov radiation. This study  successfully measures and models the light yield of seven scintillator liquids as a function of wavelength-shifter concentration in order to find the maximum light yield of each candidate. Furthermore, an extensive study on the effects of quantum-dot doping of toluene with 2 g/L of PPO in solution are analyzed. QDs reduce the width and control the location of the absorption spectrum peak. This allows the quantum efficiency of the photocathode to be matched and minimized the amount of Cherenkov radiation absorbed by the liquid scintillator.
 
-Regrettably,QDs significantly reduce the light yield of scintillators. With improved technology in quantum dot production, QDs with better characteristics such as shorter emission wavelengths are expected to become available in the near future. These QDs should be able to improve the light yield of quantum dot-doped scintillator. 
+Regrettably, QDs significantly reduce the light yield of scintillators. With improved technology in quantum dot production, QDs with better characteristics such as shorter emission wavelengths are expected to become available in the near future. These QDs should be able to improve the light yield of quantum dot-doped scintillator. 
 
 
 \begin{thebibliography}{35}
